# Citadel

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  deny.toml  justfile  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
apps/desktop/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/: mock-core.toml
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  mock.rs
apps/desktop/src/components/: AppChrome.tsx  Composer.tsx  ConversationList.tsx  MessageView.tsx  MockBanner.tsx
apps/desktop/src/hooks/: useCitadelCore.ts
apps/desktop/src/lib/: core-client.ts  tauri-core-client.test.ts  tauri-core-client.ts
apps/desktop/src/mock/: citadel-core-mock.test.ts  citadel-core-mock.ts  types.ts
ci/: check_crypto_confinement.py  check_migrations.py
crates/auth-service/: Cargo.toml
crates/auth-service/migrations/: 0002_auth_challenges_tokens.sql  0003_kt_log.sql
crates/auth-service/src/: accounts.rs  auth.rs  enroll.rs  kt_store.rs  lib.rs  main.rs  server.rs  store.rs
crates/auth-service/tests/: auth_flow.rs  enrollment.rs  key_package_pool.rs  kt_persistence.rs  registration_pool.rs
crates/blobstore-service/: Cargo.toml
crates/blobstore-service/src/: main.rs
crates/citadel-core/: Cargo.toml
crates/citadel-core/src/: credential.rs  crypto.rs  group.rs  identity.rs  lib.rs  padding.rs  testing.rs  tests_e2e.rs  transport.rs
crates/citadel-migrations/: Cargo.toml  manifest.json
crates/citadel-migrations/migrations/: 0001_accounts_devices_key_packages.sql  0004_delivery_groups_messages.sql
crates/citadel-migrations/src/: lib.rs
crates/citadel-migrations/tests/: canonical.rs
crates/citadel-migrations/tests/fixtures/: pre_0004.sql
crates/citadel-proto/: Cargo.toml
crates/citadel-proto/src/: auth.rs  bytes.rs  credential.rs  delivery.rs  envelope.rs  error.rs  ids.rs  kt.rs  lib.rs
crates/citadel-service-crypto/: Cargo.toml
crates/citadel-service-crypto/src/: lib.rs
crates/delivery-service/: Cargo.toml
crates/delivery-service/src/: auth.rs  gateway.rs  lib.rs  main.rs  server.rs  store.rs
crates/delivery-service/tests/: submit_message.rs
crates/directory-service/: Cargo.toml
crates/directory-service/src/: main.rs
crates/kt-log/: Cargo.toml
crates/kt-log/src/: lib.rs  tree.rs
crates/kt-log/tests/: append_only.rs  go_oracle_fixtures.rs
crates/kt-log/tests/fixtures/: merkle_rfc6962.json
crates/test-harness/: Cargo.toml
crates/test-harness/oracles/merkle-go/: README.md  go.mod  main.go  merkle.go
crates/test-harness/src/: canary.rs  client.rs  dbscan.rs  lib.rs  stack.rs  testkeys.rs
crates/test-harness/tests/: gateway.rs  m1_acceptance.rs  stack_smoke.rs
deploy/: README.md  docker-compose.yml
deploy/docker/: Dockerfile.service
deploy/postgres/: init.sql
docs/: backlog.md
docs/decisions/: 0000-template.md  0001-kt-log-design.md  0002-service-crypto-facade.md  0003-auth-flow-parameters.md  0004-device-enrollment-parameters.md  0005-m2-dm-delivery-wire-model.md  0006-shared-database-migrations.md  README.md
docs/issues/: 001-auth-spec-and-proto-push.md  001-import-verified-components.md  002-deny-bans-for-service-crypto.md  003-auth-spec-and-proto-push.md  004-adr-0001-kt-design-review.md  005-adr-0003-auth-params-review.md  006-keypackage-pool-review.md  007-adr-0002-facade-review.md  008-kt-leaf-appended-at-ruling.md  README.md
docs/protocol/: README.md  auth.md
docs/roles/: ADVISOR-CONTEXT.md  ADVISOR.md
docs/status/: advisor.md  grok.md  k3.md  opus.md
plans/: AGENTS.md  KICKOFF-PROMPTS.md  PLAN-GROK-4.5.md  PLAN-KIMI-K3.md  PLAN-OPUS-4.8.md  PLAN.md
