[package]
name = "citadel-core"
description = "Client core: MLS state machine, sync, local encrypted store. The only place plaintext exists (INV-1)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
citadel-proto = { workspace = true }
# Group crypto: OpenMLS (RFC 9420), single ciphersuite v1 (PLAN §4). citadel-core
# is a CLIENT crate and legitimately owns crypto (INV-2); the rule-6 confinement
# check covers only the service crates. No hand-rolled crypto (INV-10).
openmls = "0.8"
openmls_rust_crypto = "0.5"
openmls_traits = "0.5"
openmls_basic_credential = "0.5"
tls_codec = "0.4"
# Client-side Ed25519 verification of device credentials against the KT-attested
# identity key (INV-4). A vetted library, not a hand-rolled primitive (INV-10).
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[features]
# Exposes `citadel_core::testing` for the harness and adversarial suite to build
# valid and deliberately-invalid identities against real client code.
testing = []

[dev-dependencies]
citadel-service-crypto = { workspace = true }
