[package]
name = "test-harness"
description = "Multi-client integration test utilities and M0 stack probes"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "test_harness"
path = "src/lib.rs"

[[bin]]
name = "wait-healthy"
path = "src/bin/wait_healthy.rs"

[[bin]]
name = "canary-scan"
path = "src/bin/canary_scan.rs"

[dependencies]
citadel-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
# Evidence scans against real PostgreSQL (PLAN.md §4 stack). Dynamic queries
# only; the scanner needs no compile-time-checked macros.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"] }
# Client-side signing for tests (testkeys): the harness stands in for the
# client, which legitimately owns crypto (INV-2; ADR-0002 §4 rev 2 scope
# note — the confinement check covers only the four service crates).
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }

[dev-dependencies]
citadel-service-crypto = { workspace = true }
